# setup-environment-Lucho-rar

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: sum_palos_dyn.h
lib/libdyn/src/: sum_palos_dyn.c
lib/libstat/: CMakeLists.txt
lib/libstat/include/: sum_palos.h
lib/libstat/src/: sum_palos.c
src/: greetings.c  logic.c  main.c
test/: CMakeLists.txt
test/unit/: test_unit.c
